--- a/app-template/package.json
+++ b/app-template/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "history": "^4.6.3",
+    "configurable-react-scripts": "^0.1.1",
+    "history": "^3.0.0",
     "material-ui": "0.18.7",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
