--- a/app-template/package.json
+++ b/app-template/package.json
@@ -20,9 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch db.json --port 3004"
   },
   "devDependencies": {
+    "json-server": "^0.12.0",
     "redux-devtools": "^3.4.0"
   }
 }
