--- a/xv-suppliers/package.json
+++ b/xv-suppliers/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "app-template",
+  "name": "xv-suppliers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "configurable-react-scripts": "^0.1.1",
-    "history": "^3.0.0",
     "material-ui": "0.18.7",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -13,19 +11,12 @@
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "api": "json-server --watch db.json --port 3004"
-  },
-  "devDependencies": {
-    "json-server": "^0.12.0",
-    "redux-devtools": "^3.4.0"
+    "eject": "react-scripts eject"
   }
 }
